--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   },
   "dependencies": {
     "timing-object": "^3.1.6",
-    "timing-provider": "^4.1.7",
-    "tslib": "^2.0.0"
+    "timing-provider": "^4.1.7"
   },
   "description": "A website to demo a Web Audio metronome connected to a Web Timing Object.",
   "devDependencies": {
