--- a/package.json
+++ b/package.json
@@ -47,12 +47,6 @@
         "webpack": "^5.39.0"
     },
     "homepage": "https://chrisguttandin.github.io/web-audio-metronome-demo",
-    "husky": {
-        "hooks": {
-            "commit-msg": "commitlint --edit --extends @commitlint/config-angular",
-            "pre-commit": "pretty-quick --config config/prettier/config.json --staged && grunt lint"
-        }
-    },
     "license": "MIT",
     "main": "src/index.html",
     "name": "web-audio-metronome-demo",
@@ -62,6 +56,7 @@
         "url": "https://github.com/chrisguttandin/web-audio-metronome-demo.git"
     },
     "scripts": {
+        "prepare": "husky install",
         "test": "grunt lint"
     },
     "version": "1.1.51"
